# multi_iiwa_ws

./: .gitignore  .gitmodules  README.md  force_data.csv  frames_2024-08-22_14.50.10.gv  gitignore
src/arduino_interface/: package.xml  setup.py
src/cpp_moveit_motion/: CMakeLists.txt  package.xml
src/diffusion_policy_cam/: package.xml  setup.cfg  setup.py
src/dual_arm_w_tool_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/dual_doe_mc/: .setup_assistant  (+2 more)
src/motion_sequence_planner/: CMakeLists.txt  README.md  package.xml
src/motion_sequence_planner/src/: motion_seq_planner.cpp  motion_sequence_planner.cpp
src/moveit_motion/: package.xml  setup.cfg  setup.py
src/moveit_motion/moveit_motion/: MoveitActionClient.py  MoveitInterface.py  RobotInterface.py  ____joint_state_publisher_test.py  ____kuka_green_motion_plan.py  combining_waypoint.py  dual_arm_test.py  execute_on_real_robot.py  execute_on_real_robot_advanced.py  execute_on_real_robot_advanced_backup.py  get_IK_from_cartesian.py  mhubli_motion.py  mhubli_motion_follow_joint_traj.py  mhubli_motion_follow_joint_traj_current_robot_position.py  motion_planning.py  moveit_joint_traj_interface.py  raj_motion_plan.py  recorded_data_trial.py  robot_interface.py  single_arm.py  single_arm_cartesian.py  single_arm_spline.py  temp_test.py  test.py  test_joint_state_subscriber.py  viz_markers.py
src/moveit_motion/moveit_motion/_discrete_poses/: MSEC_test_fk.py  RS_record_data_with_rgb.py  box_postion.py  combining_waypoint.py  csv_execute.py  csv_execute_author.py  csv_execute_author_ik_method.py  csv_execute_author_seq_action.py  csv_execute_real.py  full_execution.py  full_execution_integrated _obs2.py  full_execution_integrated.py  full_execution_integrated_pilz.py  get_current_js.py  ptp_joint.py  record_data_with_rgb_gopro.py  record_data_with_rgb_realsense.py  replay_hand_guidance.py  replay_hand_guidance_in_deg.py  replay_hand_guidance_in_deg_steps.py  robot_prediction_execution.py  robot_prediction_execution_exp1.py  robot_prediction_execution_exp2.py  robot_prediction_execution_exp3.py  robot_prediction_execution_exp7.py  robot_prediction_execution_exp8.py  robot_prediction_execution_exp9.py  robot_prediction_execution_joint_values.py  robot_prediction_execution_state_exp4.py  robot_prediction_execution_state_exp5.py  robot_prediction_execution_state_exp6.py  rs_fk_convert.py  sam_full_execution_integrated.py  spline_cartesian.py  spline_joint.py  spline_joint_v2.py  viz_markers.py
src/moveit_motion/moveit_motion/backups/: execute_on_real_robot.py  execute_on_real_robot_advanced_backup.py  hantao_modified.py  importan_real_robotfile.py  joint_trajectories.yaml  motion_planning.py  robot_interface.py  temp_test.py  test.py
src/moveit_motion/moveit_motion/robot_calibration/: calibration.py  calibration_horns.py  calibration_mocap.py  center_calculater.py  centroid_kuka.py  kb_calibration.py  kg_calibration.py  kuka_base_pub.py  robot_in_motive_frame.py
src/moveit_motion/moveit_motion/robot_trajectories/: kuka_blue.dump  kuka_blue_0.dump  kuka_blue_1.dump  kuka_blue_10.dump  kuka_blue_11.dump  kuka_blue_12.dump  kuka_blue_13.dump  kuka_blue_14.dump  kuka_blue_15.dump  kuka_blue_16.dump  kuka_blue_17.dump  kuka_blue_18.dump  kuka_blue_19.dump  kuka_blue_2.dump  kuka_blue_20.dump  kuka_blue_21.dump  kuka_blue_22.dump  kuka_blue_23.dump  kuka_blue_24.dump  kuka_blue_25.dump  kuka_blue_26.dump  kuka_blue_27.dump  kuka_blue_28.dump  kuka_blue_29.dump  kuka_blue_3.dump  kuka_blue_30.dump  kuka_blue_31.dump  kuka_blue_32.dump  kuka_blue_33.dump  kuka_blue_34.dump  kuka_blue_35.dump  kuka_blue_36.dump  kuka_blue_37.dump  kuka_blue_38.dump  kuka_blue_39.dump  kuka_blue_4.dump  kuka_blue_40.dump  kuka_blue_41.dump  kuka_blue_42.dump  kuka_blue_43.dump  (+60 more)
src/moveit_motion/moveit_motion/ros_submodules/: MoveitInterface.py  RS_submodules.py  RobotInterface copy.py  RobotInterface.py  ros_math.py  rviz_link.py  wait_for_message.py
src/moveit_motion/moveit_motion/submodules/: RS_submodules.py  ati_sensor_socket.py  transformation.py  utils.py
src/rros-diffusion/diffusion_interface/: CMakeLists.txt  package.xml
src/rros-diffusion/diffusion_interface/msg/: Observation.msg  Observations.msg
src/rros-diffusion/diffusion_interface/srv/: DiffusionAction.srv
(+493 files in other folders)
