<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moveit_motion</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="cam@todo.todo">cam</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <build_depend>mocap_optitrack_interfaces</build_depend>
  <build_depend>ati_sensor_interface</build_depend>
  <build_depend>ati_sensor_service</build_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
